--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.10.0",
+    "ajv-formats": "^2.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "sanitizer": "^0.1.3"
   }
 }
